Fixed all the test cases
